# devhub

./: .bandit  .devhub.json  .devhub.yaml  .gitignore  .pre-commit-config.yaml  CLAUDE.md  CLAUDE_CODE_INTEGRATION.md  CONFIGURATION.md  Dockerfile  EXCELLENCE_REPORT.md  IMMEDIATE_INTEGRATION_GUIDE.md  INSTALL.md  LICENSE  PROFESSIONAL_INSTALL.md  QUICK_START.md  README.md  README_INSTALLATION.md  ROADMAP.md  USER_TESTING_RESULTS.md  UV_DEPENDENCY_MANAGEMENT.md  claude_context.md  docker-compose.yml  install.py  install.sh  install_global.py  install_global.sh  new_diff.txt  pyproject.toml  setup.py  test_bundle.yaml  uninstall.sh
.github/workflows/: branch-protection.yml  ci-cd.yml
.hypothesis/constants/: 04331d61dddce205  0c68360f324a1fa7  0d1cc1ed3900997c  0e1bd4f5c12f47a1  10022be4932f9541  177de024daeb99a1  1f77ec06ad642970  2cb22d1532bcda2c  3719aab662f8a508  4bc9ea6eef4b4ad5  4c180fb6b0987447  4cabf43ca30c8514  4e8a918eddfb5aaa  5a98f2cbfeb80de0  5ec9592a05542da8  652ff48e8427b890  653800ab51fea818  6871480c17578e16  69595c8388d450f9  6eecf363fc9543e2  798990fc40e78762  7c2edf52d53ddbc8  7d4bb77bb66be5e3  7f8b0e9e32b6731d  83720bfa29d19f92  8463ad53dd15e0a3  858f33b4bdfa847b  86f5d06c1018eb2b  8d38f82f8f6e65e1  9107481c114ffec7  9252ac22adc69416  93929c570c7d06b8  98fa3a0e629cb628  98fd225aad612339  99994110e7cd054f  a05f9bd1b86d1f9b  a9856ec6e165b4ea  ac47df94ad2bc035  bd37a36703675c36  c753c86c2fccedfa  (+15 more)
.hypothesis/examples/04e6b3400353b141/: 0d8bf72ecb4b01fc  1286f92537f02a66  17f5eda457118f0f  4ae3fc0f0b87fb21  64c450b0e6cc5e55  693fb374b51cd3ea  7167c6cf5c15ee58  7f8b06d7a66384d2  c119711510789df3  e5ed43cea4840c23  fc583120b6446fe6
.hypothesis/examples/0d8bf72ecb4b01fc/: 0266f0406ab3c04c  56328b37a3a49e51  ed6faefd1efeea39
.hypothesis/examples/1286f92537f02a66/: d7609b0f34fb83e7
.hypothesis/examples/4ae3fc0f0b87fb21/: 7b9c7453ab1c6c64
.hypothesis/examples/64c450b0e6cc5e55/: ac1e26c9cd3aa575
.hypothesis/examples/7167c6cf5c15ee58/: 068b6b5922191176
.hypothesis/examples/c119711510789df3/: 082beafdb564e969  11ef8593f7da7316  21a9a96e2db53dec  306b0aa2b8ce772d  3b71d6443b3e48ae  40db8f4b7428ffa5  46af08e8e625f61f  4a8956daa65adeda  506869ea21a98aef  7c9614ea3e65f990  7cab2d04dd7482cb  7f5c069154fd4a9f  8f92b140ae840b94  9b854e9ca80ad9c3  a181743dc39c1d92  c970e165b91dafdc  d156c9433306f02b  de3f233a3938091a  e201891183fcf0af  fbc4543593329ae8
.hypothesis/examples/e5ed43cea4840c23/: 350e6df02f7a3a61  3637d05bbafb3672  71f11164585f45a8  864f5cfbf9fbd0b0  9dec07df7a2b3f7d  a3bdc64ed207e3d4  b5741561ac437735  c574b3567ed75d62  e322bafa3fbada15  f8f04aebd316bc4c  faa04ddfb677bce0  fc9192b2b848a506
.hypothesis/examples/fc583120b6446fe6/: 1c2309b5c9f3c963  3f191407314b4e12  57b06f5de98d5d17  7d30cebe26787389  8c307db873cb9abe  d5e07c2ec2989d27  d8de38bca21134da  f26c95612e57f7eb  f2db83485ea96959
.junie/: guidelines.md
docs/: IDE_INTEGRATIONS.md  MCP_RESEARCH.md  MCP_SETUP.md  SDK_GUIDE.md
examples/: before_after_comparison.md  claude_code_transformation.py  devhub.yaml.example  existing_project_enhancement.py  gitlab_first_class_usage.py  immediate_setup_script.py  platform_agnostic_usage.py  setup_project.py
homebrew/: README.md  devhub.rb
review-bundles/bundle-20250918-162818/: bundle.json
scripts/: install-devhub.sh
src/devhub/: __init__.py  __main__.py  cache.py  claude_integration.py  cli.py  config.py  connection_pool.py  gitlab_integration.py  main.py  mcp_server.py  mcp_server_comprehensive.py  observability.py  platform_sdk.py  plugins.py  plugins_builtin.py  resilience.py  sdk.py  testing_framework.py  vault.py
tests/: __init__.py  test_cache.py  test_claude_integration.py  test_cli_commands.py  test_cli_comprehensive.py  test_cli_integration.py  test_config.py  test_config_additional.py  test_connection_pool.py  test_coverage_boost.py  test_coverage_improvements.py  test_error_handling.py  test_integration.py  test_main_additional.py  test_main_comprehensive.py  test_mcp_server.py  test_mcp_server_comprehensive.py  test_observability.py  test_plugins.py  test_resilience.py  test_sdk.py  test_sdk_additional.py  test_testing_framework.py  test_utils.py  test_vault.py
